tests/machine/x/c/sum_builtin.error
line: 0
error: output mismatch
-- got --
-nan
-- want --
6
   1: #include <stdio.h>
